# matchpoint

./: CLAUDE.md  README.md  index.js  package-lock.json  package.json
backend/: .env  .env.production  check-db.js  index.js  package-lock.json  package.json
backend/config/: db.js
backend/controllers/: authcontroller.js
backend/middleware/: auth.js
backend/models/: match.js  user.js
backend/routes/: auth.js  match.js
config/: db.js
engine/: .dockerignore  DESIGN.md  models.py  railway.toml  scoring.py  solver.py  test_cpp_benchmark.py  test_cpp_equivalence.py  test_datagen.py  test_scoring.py  test_solver.py  test_solver_vs_oracle.py  utils.py
engine/backend/: .gitignore  DEPLOY.md  Dockerfile  README.md  railway.toml  requirements.txt  seed_rooms.py
engine/backend/app/: config.py  database.py  main.py  worker.py
engine/backend/tests/: test_auth.py  test_matches.py  test_squads.py
engine/bench/: datagen.py
engine/cpp/: CMakeLists.txt  bindings.cpp  ordered_assign.h  scoring_cpp.h  solver_cpp.cpp  solver_cpp.h  types.h
engine/frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
engine/frontend/src/: App.tsx
frontend/: .env  .env.example  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vercel.json
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/app/: layout.jsx  metadata.jsx
frontend/src/components/: MatchCard.jsx  Navbar.jsx  Protected_route.jsx
models/: match.js  user.js
routes/: auth.js  match.js
(+56 files in other folders)
